@@ -13,6 +13,7 @@ Included
 - Gate now runs adapter maintenance doctor during verify (`adapter_doctor` step), with optional strict mode via `WEFTEND_360_ADAPTER_DOCTOR_STRICT=1` (strict failures are recorded as explicit PARTIAL evidence with reason codes).
 - `verify:360` now captures adapter doctor output quietly (no raw doctor JSON console dump) while preserving step evidence in the verify receipt/report.
 - Added `npm run verify:360:adapter:strict` helper for full verify runs with strict adapter doctor gating enabled.
+- `verify:360` idempotence context now includes strict-mode flags, preventing replay-key collisions between strict and non-strict runs.
 - Safe-run now enforces a non-blocking evidence corridor check before completion:
 - Expected receipt artifacts are verified for presence and digest consistency.
 - Pre-existing/stale unmanaged output files anywhere under the run out-root are flagged as orphan evidence.
